# EffectLibraryRust

./: .gitignore  Cargo.toml  EffectLibraryRust.sln  README.md
.claude/: settings.local.json
EffectConverter/: Program.cs
crate/: Cargo.toml  README.md  output.txt  test_ptcl.py  test_ptcl_load.rs
crate/output_test/: NamcoFile.json  PtclHeader.txt
crate/scripts/: batch_eff_compare.py  batch_eff_roundtrip.py  compare_published_vs_optimized.py  compare_setup.py  generate_emitter_write.py  speedtest_csharp_rust.py  speedtest_roundtrip.py
crate/src/: bfres.rs  bnsh.rs  bntx.rs  creator.rs  dumper.rs  emitter.rs  enums.rs  lib.rs  main.rs  namco_file.rs  ptcl_file.rs  reader.rs  structs.rs
crate/src/bfres/: common.rs  dict.rs  load.rs  mod.rs  save.rs  types.rs
crate/src/emitter/: emitter_write.rs
