[package]
name = "effect_library"
version = "0.1.0"
edition = "2021"
description = "A Rust library for decompiling Nintendo Switch VFX effect files (.eff, .ptcl)"
auto-bins = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }
base64 = "0.21"
regex = "1"
byteorder = "1"
num-bigint = "0.4"

[[bin]]
name = "effect_dumper"
path = "src/main.rs"
