[package]
name = "effect_library"
version = "1.1.0"
edition = "2021"
description = "Load, dump, and re-encode Nintendo Switch VFX effect files (.eff, .ptcl, BFRES, BNTX, BNSH)"
readme = "README.md"
license = "MIT"
license-file = "../LICENSE"
authors = ["Common Leap"]
repository = "https://github.com/Common-Leap/EffectLibraryRust"
homepage = "https://github.com/Common-Leap/EffectLibraryRust"
keywords = ["nintendo", "switch", "vfx", "eff", "ptcl"]
categories = ["parser-implementations", "game-development"]
exclude = ["scripts/**", "target/**"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "1", features = ["serde"] }
base64 = "0.21"
byteorder = "1"
num-bigint = "0.4"

[[bin]]
name = "effect_converter"
path = "src/main.rs"
